fixed alignment of select tag

--- a/chromium/pages/common.css
+++ b/chromium/pages/common.css
@@ -50,7 +50,7 @@ span, label {
 }
 
 select {
-    padding: 1px 5px;
+    padding: 0px 5px;
 }
 
 input {
